# transporter-benchmark

./: Dockerfile  README.md  benchmark.sh
database/docker/: Dockerfile
database/java/adf-database/: settings.gradle
database/java/adf-database/app/: build.gradle
database/java/adf-database/app/src/main/java/adf/database/: App.java  RedisTransporter.java  RedisTranspoter.java
database/java/adf-database/app/src/test/java/java/: AppTest.java
database/proto/: adf.proto
database/python/: README.md  pyproject.toml  server.py
database/python/pb/: adf_pb2.py
gRPC/: README.md
gRPC/java/adf-grpc/: settings.gradle
gRPC/java/adf-grpc/app/: build.gradle
gRPC/java/adf-grpc/app/src/main/: proto
gRPC/java/adf-grpc/app/src/main/java/adf/grpc/: App.java  (+1 more)
gRPC/proto/: adf.proto
gRPC/protos/: adf.proto
gRPC/python/: README.md  pyproject.toml  server.py
gRPC/python/generate/: adf_pb2.pyi  adf_pb2_grpc.py
gRPC/python/pb/: adf_pb2.py  adf_pb2.pyi  adf_pb2_grpc.py
native/java/adf-def/: settings.gradle
native/java/adf-def/app/: build.gradle
results/: adf-def-.txt  adf-def-all.txt  adf-def.txt  adf-grpc-.txt  adf-grpc-all.txt  adf-grpc.txt  adf-socket-Inet.txt  adf-socket-Unix.txt  adf-socket.txt  gRPC--performance-memory.csv  gRPC-all-memory.csv  gRPC-memory.csv  native-all-memory.csv  native-memory.csv  socket-Inet-memory.csv  socket-Unix-memory.csv  socket-memory.csv
socket/java/adf-socket/: settings.gradle
socket/java/adf-socket/app/: build.gradle
socket/proto/: adf.proto
socket/python/: pyproject.toml  server.py
socket/python/pb/: adf_pb2.py
(+28 files in other folders)
