[tool.poetry]
name = "transporter-grpc"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
